<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/app_title"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/Login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.2dp"
            android:hint="@string/inputNameHnit"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" 
            />

        <EditText
            android:id="@+id/Login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.2dp"
            android:hint="@string/inputPwdHnit"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" 
            />
         <RadioGroup
	        android:id="@+id/userTypeRadio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/patientRadio"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/patient" 
	            android:checked="true"/>
	
	        <RadioButton
	            android:id="@+id/RadioButton01"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/doctor" />
	
	        <RadioButton
	            android:id="@+id/RadioButton02"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/pharmacist" />
	
	        <RadioButton
	            android:id="@+id/RadioButton03"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/drug_administration" />
	    </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/Login_OK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/forgetPwdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Login_OK"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/forget_password"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/regText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/Login_OK"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/register"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>